Added data endpoints, Updated docs, Added swagger-ui to docker compose, Added tool to convert xml files to json
