# server/DB/models/attending.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type Attending struct {
+	gorm.Model
+	Voivodeship       string
+	Year              int
+	StudentsAttending int
+}
