# server/DB/models/averageWage.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type AverageWage struct {
+	gorm.Model
+	Voivodeship string
+	Year        int
+	AverageWage float64
+}
