# server/DB/models/graduated.go
@@ -1,0 +1,12 @@
+package models
+
+import (
+	"gorm.io/gorm"
+)
+
+type Graduating struct {
+	gorm.Model
+	Voivodeship        string
+	Year               int
+	StudentsGraduating int
+}
